--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -17,53 +17,36 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/msg_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="88dp"
+        style="@style/chat_RV"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="0dp"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
 <LinearLayout
     android:id="@+id/layout"
-    android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:layout_marginBottom="16dp"
+    style="@style/chat_layout"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:gravity="center"
-    android:orientation="horizontal">
+    app:layout_constraintStart_toStartOf="parent"
+    >
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/btn_attach"
         android:src="@drawable/baseline_add_24"
-        android:elevation="0dp"
-        app:elevation="0dp"
-        android:backgroundTint="@android:color/transparent"
-        android:contentDescription="Attachment"
-        android:outlineProvider="none"
+        android:contentDescription="@string/attachment"
         android:onClick="@{vm.addAttachment}"
-        app:borderWidth="0dp"
+        style="@style/button_attach"
         />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edt_msg"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:hint="Enter the Message"
-        android:textSize="20sp"
-        android:layout_marginStart="0dp"
+        android:hint="@string/enter_the_message"
+        style="@style/message_editText"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="SEND"
-        android:layout_marginEnd="8dp"
-        app:fabCustomSize="48dp"
+        android:contentDescription="@string/send"
+        style="@style/button_send"
         android:src= "@drawable/baseline_send_24"/>
 
 
