--- a/app/src/main/res/layout/recycler_view_receiver_dialog.xml
+++ b/app/src/main/res/layout/recycler_view_receiver_dialog.xml
@@ -18,7 +18,7 @@
             android:id="@+id/body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginStart="16dp"
             android:padding="8dp"
             android:orientation="vertical" >
         </LinearLayout>
