--- a/app/src/main/res/layout/recycler_view_chat_list.xml
+++ b/app/src/main/res/layout/recycler_view_chat_list.xml
@@ -16,13 +16,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
             android:src="@drawable/ic_image_foreground"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF2E63"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
+            style="@style/chat_list_image"
             />
 
         <LinearLayout
@@ -34,31 +29,22 @@
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="24sp"
-                android:textStyle="bold"
                 style="@style/chat_list_name"
-                android:layout_marginStart="8dp"/>
+                />
 
             <TextView
                 android:id="@+id/latest_message_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="20sp"
                 style="@style/chat_list_text"
-                android:layout_marginStart="8dp"/>
+                />
         </LinearLayout>
 
         <TextView
             android:id="@+id/msg_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text=""
             style="@style/chat_list_time"
-            android:layout_marginTop="16dp"/>
+            />
 
     </LinearLayout>
 
