--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -35,7 +35,7 @@
         android:id="@+id/btn_attach"
         android:src="@drawable/baseline_add_24"
         android:contentDescription="@string/attachment"
-        android:onClick="@{vm.addAttachment}"
+        android:onClick="@{vm::addAttachment}"
         style="@style/button_attach"
         />
 
